<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="tyPushButtonsControlBlock" Id="{c32c38ad-b7b2-4568-9cb9-f2b4792979af}">
    <Declaration><![CDATA[TYPE tyPushButtonsControlBlock :
STRUCT
bRunPushButton AT %I* : BOOL;
bStopPushButton	AT %I* : BOOL;
bResetPushButton	AT %I* : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>