<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{632c5b18-c91c-4915-aa02-81171c2efa54}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	bGlobalReset : bool := false ;  
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>